[package]
name = "oxidized"
version = "0.1.0"
authors = ["DanCodes <dan@dancodes.online>"]
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "crates/api",
    "crates/service",
    "crates/entity",
    "crates/torrent",
    "crates/migration",
    "crates/config",
]

[dependencies]
oxidized-api = { path = "crates/api" }
