[package]
name = "rocket-example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.14" # sea-orm version
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.20.0"

