[package]
name = "oxidized-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
aquatic_http = "0.8.0"
aquatic_http_protocol = "0.8.0"
aquatic_udp_protocol = "0.8.0"
bip_dht = "0.6.0"
bip_handshake = "0.7.1"
bip_util = "0.5.0"
bt_bencode = "0.8.0"
futures-util = "0.3.30"
hex = "0.4.3"
librqbit = "5.4.1"
rand = "0.8.5"
reqwest = "0.11.24"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "process"] }
tracing = "0.1.40"

[lib]
path = "src/lib.rs"
