[package]
name = "oxidized-api"
version = "0.1.0"
authors = ["Sam Samai <sam@studio2pi.com.au>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
oxidized-service = { path = "../service" }
oxidized-config = { path = "../config" }
oxidized-migration = { path = "../migration" }
oxidized-torrent = { path = "../torrent" }
oxidized-entity = { path = "../entity" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
tokio = "1.29.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.34"
sea-orm-rocket = "0.5.4"
serde_json = "1.0.114"
serde = "1.0.197"
quick-xml = "0.31.0"
anyhow = "1.0.80"
