[package]
name = "oxidized-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["clock"] }
oxidized-entity = { path = "../entity" }
serde = "1.0.197"
tokio = "1.36.0"

[dependencies.sea-orm]
version = "0.12.14" # sea-orm version
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[lib]
path = "src/lib.rs"
