[package]
name = "oxidized-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aquatic_http = "0.8.0"
aquatic_http_protocol = "0.8.0"
aquatic_udp_protocol = "0.8.0"
futures-util = "0.3.30"
hex = "0.4.3"
librqbit = "5.4.1"
reqwest = "0.12.4"
rand = "0.8.5"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "process"] }
tracing = "0.1.40"
url = "2.5.0"
oxidized-config = { path = "../config" }

[lib]
path = "src/lib.rs"
